--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                         <a class="page-scroll" href="/api">API</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="/auth">Auth</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
