--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,17 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/jeromelachaud">Jerome Lachaud</a></p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+            <div class="row">
+            <div class="row">
+                <div class="col-xs-6 col-sm-4"><h2>Blog Post</h2>
+                Here's a sweet blog about stuff and shiz</div>
+                <div class="col-xs-6 col-sm-4"><h2>Blog Post</h2>
+                    Here's a sweet blog about stuff and shiz</div>
+                <!-- Optional: clear the XS cols if their content doesn't match in height -->
+                <div class="clearfix visible-xs-block"></div>
+                <div class="col-xs-6 col-sm-4"><h2>Blog Post</h2>
+                    Here's a sweet blog about stuff and shiz</div>
             </div>
         </div>
+            </div>
     </section>
