Tweaked a bunch of settings

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,14 +3,17 @@
         <div class="row">
             <div class="row">
             <div class="row">
+                <div class="col-xs-6 col-sm-4" style="padding: 0px 20px 15px 20px"><h2>Blog Post</h2>
+                <p style="font-size: 14px;">Here's a sweet blog about stuff and shiz. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+                    <a href="#" class="btn btn-primary btn-lg active" role="button">Read More</a>
+                    </div>
                 <div class="col-xs-6 col-sm-4"><h2>Blog Post</h2>
-                Here's a sweet blog about stuff and shiz</div>
-                <div class="col-xs-6 col-sm-4"><h2>Blog Post</h2>
-                    Here's a sweet blog about stuff and shiz</div>
+                    Here's a sweet blog about stuff and shiz. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
                 <!-- Optional: clear the XS cols if their content doesn't match in height -->
                 <div class="clearfix visible-xs-block"></div>
                 <div class="col-xs-6 col-sm-4"><h2>Blog Post</h2>
-                    Here's a sweet blog about stuff and shiz</div>
+                    Here's a sweet blog about stuff and shiz. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div>
             </div>
         </div>
             </div>
