uninstalled the maps stuff added libs page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,13 +18,16 @@
                         <a href="/"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="/libs">Libraries</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="/api">API</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/auth">Auth</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="/#contact">Contact</a>
                     </li>
                 </ul>
             </div>
