--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="/">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <img src="/img/bbdev.svg" style="height:30px;">
                 </a>
             </div>
 
@@ -18,7 +18,7 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/libs">Libraries</a>
+                        <a class="page-scroll" href="/#libraries">Libraries</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/api">API</a>
@@ -27,7 +27,7 @@
                         <a class="page-scroll" href="/auth">Auth</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#contact">Contact</a>
+                        <a class="page-scroll" href="/#wehooks">Webhooks</a>
                     </li>
                 </ul>
             </div>
