added slack button, and some copy

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,6 +29,12 @@
                     <li>
                         <a class="page-scroll" href="/#wehooks">Webhooks</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/blog">Blog</a>
+                    </li>
+                    <li>
+                        <div class="page-scroll" style="margin:14px;"><script async defer src="http://slack.developer.bombbomb.com/slackin.js"></script></div>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
