--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#libraries">Libraries</a>
+                        <a class="page-scroll" href="/libs">Libraries</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/api">API</a>
