--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -10,10 +10,15 @@
                 <a href="/api/#!/Utilities/CreateOAuthClient">create an OAuth Client Id and Secret</a>
                 you can use to send requests to the BombBomb API.</p>
 
-            <h2>Step 3. Get your library</h2>
-            <p>With your account credentials, you can now
-                <a href="/api/#!/Utilities/CreateOAuthClient">create an OAuth Client Id and Secret</a>
-                you can use to send requests to the BombBomb API.</p>
+            <h2>Step 3. Do the OAuth Dance</h2>
+            <p><a>Give your users a link</a> that has them approve your app for access, then write down their token.</p>
+
+            <h2>Step 4. Get your library</h2>
+            <p>This is it! Pop in one of <a href="/libs">our ready-to-play libraries</a>, give it the user token, and you're
+            cooking!</p>
+
+            <h2>Bonus Step 5. Subscribe to webhooks!</h2>
+            <p>Stay in the loop with simple POSTs from our <a href="/webhooks">webhooks</a>.</p>
 
         </div>
     </div>
