--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
                         <a class="page-scroll" href="/auth">Auth</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#wehooks">Webhooks</a>
+                        <a class="page-scroll" href="/webhooks">Webhooks</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/blog">Blog</a>
