--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="/">
-                    <img src="/img/bbdev.svg" style="height:30px;">
+                    <img src="/img/devlogo.png" alt="BombBomb Developers">
                 </a>
             </div>
 
