--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,23 +18,36 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/libs">Libraries</a>
+                        <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/api">API</a>
+                        <a class="page-scroll" href="#">Login</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="/auth">Auth</a>
+                    <li class="menu-btn"><a></a>
+                        <ul>
+                            <li>
+                                <a class="page-scroll" href="/auth">Auth</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/webhooks">Webhooks</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/blog">Blog</a>
+                            </li>
+                            <li>
+                                <div class="page-scroll" style="margin:14px;"><script async defer src="http://slack.developer.bombbomb.com/slackin.js"></script></div>
+                            </li>
+
+                        </ul>
+
+
                     </li>
-                    <li>
-                        <a class="page-scroll" href="/webhooks">Webhooks</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/blog">Blog</a>
-                    </li>
-                    <li>
-                        <div class="page-scroll" style="margin:14px;"><script async defer src="http://slack.developer.bombbomb.com/slackin.js"></script></div>
-                    </li>
+
+
+
+
+
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
