--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
+                        <a class="page-scroll boxedlink" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#">Login</a>
