--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,15 +1,17 @@
-nav .navbar-brand {
-  height: auto; }
-nav img {
-  width: 250px; }
-nav.top-nav-collapse {
-  background: #FF6600; }
-nav .navbar-nav > li > a {
-  padding: 5px 15px;
-  margin: 15px 15px 0; }
-nav .boxedlink {
-  border: 1px solid #fff; }
-nav .menu-btn ul {
-  display: none; }
+nav {
+  text-transform: none; }
+  nav .navbar-brand {
+    height: auto; }
+  nav img {
+    width: 250px; }
+  nav.top-nav-collapse {
+    background: #FF6600; }
+  nav .navbar-nav > li > a {
+    padding: 5px 15px;
+    margin: 15px 15px 0; }
+  nav .boxedlink {
+    border: 1px solid #fff; }
+  nav .menu-btn ul {
+    display: none; }
 
 /*# sourceMappingURL=style.css.map */
