--- a/_includes/megatron.html
+++ b/_includes/megatron.html
@@ -5,12 +5,12 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Build Smiles</h1>
-                        <p class="intro-text">{{ site.description }}<br>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+                        <p class="intro-text">{{ site.description }}</p>
                     </div>
                 </div>
             </div>
+            <a href="#about" class="btn btn-circle page-scroll">
+                <i class="fa fa-angle-double-down animated"></i>
+            </a>
         </div>
     </header>
