--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,4 +1,12 @@
-<section id="getting_started" class="container content-section text-left">
+<section id="why_bombbomb" class="container content-section text-center">
+    <h2>Why build with BombBomb?</h2>
+
+
+</section>
+
+
+
+<section id="getting_started" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Step 1. Create a Developer Account</h2>
