--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
+        <div class="text-left">
+            <ul>
+                <li><a href="/">About BombBomb</a></li>
+                <li><a href="/">API</a></li>
+                <li><a href="/">AUTH</a></li>
+                <li><a href="/">Blog</a></li>
+                <li><a href="/">Jobs</a></li>
+                <li><a href="/">Libraries</a></li>
+                <li><a href="/">Support</a></li>
+                <li><a href="/">Webhook</a></li>
+            </ul>
         </div>
     </footer>
