--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -7,26 +7,42 @@
 
 
 <section id="getting_started" class="container content-section text-center">
+    <h2>How to build with BombBomb.</h2>
     <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-            <h2>Step 1. Create a Developer Account</h2>
-            <p><a href="http://bombbomb.com/trial/?promo=DEVELOPER" target="_blank">Creating your Developer Account</a>
+        <div class="col-lg-12">
+            <div class="steps">
+                <img src="img/steps/one.png" alt="step one">
+                <h3><span>Step one</span> Create an<br> Account</h3>
+                 <p><a href="http://bombbomb.com/trial/?promo=DEVELOPER" target="_blank">Creating your Developer Account</a>
                 gives you a sandbox where you can play, send a few emails, and get to know BombBomb.</p>
+            </div>
 
-            <h2>Step 2. Create an OAuth Client</h2>
-            <p>With your account credentials, you can now
-                <a href="/api/#!/Utilities/CreateOAuthClient">create an OAuth Client Id and Secret</a>
+            <div class="steps">
+                <img src="img/steps/two.png" alt="step one">
+                <h3><span>Step two</span> Create an<br> OAuth Client</h3>
+                 <p>With your account credentials, you can now
+                 <a href="/api/#!/Utilities/CreateOAuthClient">create an OAuth Client Id and Secret</a>
                 you can use to send requests to the BombBomb API.</p>
+            </div>
 
-            <h2>Step 3. Do the OAuth Dance</h2>
-            <p><a>Give your users a link</a> that has them approve your app for access, then write down their token.</p>
+            <div class="steps">
+                <img src="img/steps/three.png" alt="step one">
+                <h3><span>Step three</span> Do the<br> OAuth Dance</h3>
+                <p><a>Give your users a link</a> that has them approve your app for access, then write down their token.</p>
+            </div>
 
-            <h2>Step 4. Get your library</h2>
-            <p>This is it! Pop in one of <a href="/libs">our ready-to-play libraries</a>, give it the user token, and you're
+            <div class="steps">
+                <img src="img/steps/four.png" alt="step one">
+                <h3><span>Step four</span> Get your<br> library</h3>
+                <p>This is it! Pop in one of <a href="/libs">our ready-to-play libraries</a>, give it the user token, and you're
             cooking!</p>
+            </div>
 
-            <h2>Bonus Step 5. Subscribe to webhooks!</h2>
-            <p>Stay in the loop with simple POSTs from our <a href="/webhooks">webhooks</a>.</p>
+            <div class="steps">
+                <img src="img/steps/five.png" alt="step one">
+                <h3><span>Step five</span> Subscribe to<br> webhooks</h3>
+                <p>Stay in the loop with simple POSTs from our <a href="/webhooks">webhooks</a>.</p>
+            </div>
 
         </div>
     </div>
