--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -2,34 +2,28 @@
     <section id="libraries" class="content-section text-center">
         <a href="/libs">
             <div class="download-section">
-                <div class="container">
-                    <div class="row">
-                        <h2>Libraries</h2>
-                    </div>
                     <div class="row">
 
                         <div class="col-md-2 col-md-offset-1">
-                            <img src="/img/libs/nodejs.svg" class="img-responsive" alt="NodeJS">
+                            <img src="/img/libs/node.png" class="img-responsive" alt="NodeJS">
                         </div>
 
                         <div class="col-md-2">
-                            <img src="/img/libs/ruby-horizontal.svg" class="img-responsive" alt="Ruby">
+                            <img src="/img/libs/ruby.png" class="img-responsive" alt="Ruby">
                         </div>
 
                         <div class="col-md-2">
-                            <img src="/img/libs/dotnet.png" class="img-responsive" alt="Microsoft .net">
+                            <img src="/img/libs/net.png" class="img-responsive" alt="Microsoft .net">
                         </div>
 
                         <div class="col-md-2">
-                            <img src="/img/libs/swift.svg" class="img-responsive" alt="Swift">
+                            <img src="/img/libs/swift.png" class="img-responsive" alt="Swift">
                         </div>
 
                         <div class="col-md-2">
-                            <img src="/img/libs/PHP-logo.svg" class="img-responsive" alt="PHP" style="height: 60px;">
+                            <img src="/img/libs/php.png" class="img-responsive" alt="PHP" style="height: 60px;">
                         </div>
                     </div>
-
-                </div>
             </div>
         </a>
     </section>
