--- a/_includes/megatron.html
+++ b/_includes/megatron.html
@@ -1,5 +1,5 @@
     <!-- Intro Header -->
-    <header class="intro">
+    <section data-type="background" data-speed="10" class="intro" style="background-attachment: fixed; background-repeat: no-repeat; background-position: center;">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
@@ -9,8 +9,8 @@
                     </div>
                 </div>
             </div>
-            <a href="#about" class="btn btn-circle page-scroll">
+            <a href="#why_bombbomb" class="btn btn-circle page-scroll">
                 <i class="fa fa-angle-double-down animated"></i>
             </a>
         </div>
-    </header>
+    </section>
