--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
  <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
+
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
@@ -18,21 +18,34 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll boxedlink" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
+                        <a class="page-scroll boxedlink" target="_blank" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#">Login</a>
                     </li>
-                    <li class="menu-btn"><a></a>
+                    <li class="menu-btn"><div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
                         <ul>
                             <li>
+                                <a class="page-scroll" href="http://www.bombbomb.com">About BombBomb</a>
+                            </li>                            <li>
+                                <a class="page-scroll" href="/api">API</a>
+                            </li>                            <li>
                                 <a class="page-scroll" href="/auth">Auth</a>
                             </li>
                             <li>
-                                <a class="page-scroll" href="/webhooks">Webhooks</a>
+                                <a class="page-scroll" href="/blog">Blog</a>
                             </li>
                             <li>
-                                <a class="page-scroll" href="/blog">Blog</a>
+                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com/jobs">Jobs</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/libs">Libraries</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com/support">Support</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" href="/webhooks">Webhooks</a>
                             </li>
                             <li>
                                 <div class="page-scroll" style="margin:14px;"><script async defer src="http://slack.developer.bombbomb.com/slackin.js"></script></div>
@@ -51,6 +64,4 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
     </nav>
