--- a/_includes/css/_index.scss
+++ b/_includes/css/_index.scss
@@ -1,8 +1,10 @@
 .intro {
   .intro-body{
+    position: relative;
     .brand-heading {
       color: $yellow;
       text-transform: none;
+      @include heavy;
     }
     .intro-text {
       border-bottom: 1px solid $white;
@@ -11,13 +13,14 @@
       border: none;
       position: absolute;
       bottom: 25px;
-      margin-left: -45px;
       left: 50%;
+      -webkit-transform: translateX(-50%);
+      transform: translateX(-50%);
     }
   }
 }
 
-#getting_started, #why_bombbomb {
+#getting_started, #why_bombbomb, #libraries {
   width: 100%;
   padding: 75px;
 }
@@ -28,8 +31,71 @@
   background: $white;
   h2 {
     color: $orange;
+    text-transform: none;
+    @include medium;
   }
 }
 #getting_started {
   background: $teal;
+  h2 {
+    text-transform: none;
+    @include medium;
+  }
+  p {
+    display: none;
+  }
+  .steps {
+    background: #38918F;
+    width: calc(20% - 50px);
+    display: inline-block;
+    margin: 10px;
+    vertical-align: top;
+    padding: 30px 30px;
+    height: 200px;
+    position: relative;
+    h3 {
+      font-size: 18px;
+      line-height: 1.25;
+      @include heavy;
+    }
+    span {
+      display: block;
+      font-size: 12px;
+      color: $gray1;
+      line-height: 3;
+    }
+    img {
+      max-height: 45px;
+      margin: 0 0 10px;
+    }
+    &:hover > p {
+      display: inline;
+      width: 100%;
+      height: 100%;
+      background: $darkteal;
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 50px 20px;
+      font-size: 14px;
+      margin: 0;
+      a {
+        color: $gray1;
+      }
+    }
+  }
+}
+
+#libraries {
+  background: $gray1;
+
+  .download-section {
+    background: transparent;
+    padding: 0;
+  }
+
+  img {
+    width: 80%;
+    margin: 0 10%;
+  }
 }
