--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,10 @@
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
-    <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="//fast.fonts.net/jsapi/85d17a85-afff-42e2-ac8d-7a7857ad5c63.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/scripts.js"></script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
