--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
                     <li class="menu-btn"><div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
                         <ul>
                             <li>
-                                <a class="page-scroll" href="http://www.bombbomb.com">About BombBomb</a>
+                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com">About BombBomb</a>
                             </li>                            <li>
                                 <a class="page-scroll" href="/api">API</a>
                             </li>                            <li>
@@ -36,13 +36,13 @@
                                 <a class="page-scroll" href="/blog">Blog</a>
                             </li>
                             <li>
-                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com/jobs">Jobs</a>
+                                <a class="page-scroll" target="_blank" href="http://bombbomb.com/workwithus">Jobs</a>
                             </li>
                             <li>
                                 <a class="page-scroll" href="/libs">Libraries</a>
                             </li>
                             <li>
-                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com/support">Support</a>
+                                <a class="page-scroll" target="_blank" href="http://support.bombbomb.com">Support</a>
                             </li>
                             <li>
                                 <a class="page-scroll" href="/webhooks">Webhooks</a>
