--- a/_includes/css/_nav.scss
+++ b/_includes/css/_nav.scss
@@ -1,6 +1,9 @@
 .navbar {
     text-transform: none;
     padding: 25px 135px;
+  .mobile {
+    display:none;
+  }
   .navbar-brand {
     height: auto;
   }
