--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,32 +2,35 @@
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <i class="fa fa-bars"></i>
-                </button>
                 <a class="navbar-brand page-scroll" href="/">
                     <img src="/img/devlogo.png" alt="BombBomb Developers">
                 </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <div class="navbar-right ">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="/"></a>
                     </li>
-                    <li>
+                    <li class="desk">
                         <a class="page-scroll boxedlink" target="_blank" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
-                    <li>
+                    <li class="desk">
                         <a class="page-scroll" href="#">Login</a>
                     </li>
                     <li class="menu-btn"><div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
                         <ul>
-                            <li>
-                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com">About BombBomb</a>
-                            </li>                            <li>
+
+
+                           <li class="mobile">
+                                <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
+                            </li>
+                           <li class="mobile">
+                                <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Login</a><br><br>
+                            </li>
+                           <li>
                                 <a class="page-scroll" href="/api">API</a>
                             </li>                            <li>
                                 <a class="page-scroll" href="/auth">Auth</a>
@@ -36,19 +39,24 @@
                                 <a class="page-scroll" href="/blog">Blog</a>
                             </li>
                             <li>
-                                <a class="page-scroll" target="_blank" href="http://bombbomb.com/workwithus">Jobs</a>
-                            </li>
-                            <li>
                                 <a class="page-scroll" href="/libs">Libraries</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" target="_blank" href="http://support.bombbomb.com">Support</a>
                             </li>
                             <li>
                                 <a class="page-scroll" href="/webhooks">Webhooks</a>
                             </li>
                             <li>
                                 <div class="page-scroll" style="margin:14px;"><script async defer src="http://slack.developer.bombbomb.com/slackin.js"></script></div>
+                            </li>
+<br>
+
+                            <li>
+                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com">About BombBomb</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" target="_blank" href="http://bombbomb.com/workwithus">Jobs</a>
+                            </li>
+                            <li>
+                                <a class="page-scroll" target="_blank" href="http://support.bombbomb.com">Support</a>
                             </li>
 
                         </ul>
