--- a/_includes/css/_index.scss
+++ b/_includes/css/_index.scss
@@ -68,7 +68,7 @@
       max-height: 45px;
       margin: 0 0 10px;
     }
-    &:hover > p {
+    &:hover > div {
       display: inline;
       width: 100%;
       height: 100%;
@@ -76,11 +76,22 @@
       position: absolute;
       top: 0;
       left: 0;
-      padding: 50px 20px;
-      font-size: 14px;
       margin: 0;
+      p {
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+        color: $white;
+        left: 0;
+        padding: 0 20px;
+        font-size: 14px;
+        display: inline;
+
+      }
       a {
         color: $gray1;
+        cursor: pointer;
       }
     }
   }
