--- a/_includes/css/_standard.scss
+++ b/_includes/css/_standard.scss
@@ -62,6 +62,11 @@
   .missing {
     background: $teal;
     width: 100%;
+    margin: 0;
+    h2 {
+      text-transform: none;
+      @include medium;
+    }
     p {
       color: $white;
       a {
