--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -2,5 +2,5 @@
 @import "_nav.scss";
 @import "_footer.scss";
 @import "_index.scss";
-@import "_libraries.scss";
-@import "_blog.scss";
+@import "_standard.scss";
+@import "_responsive.scss";
