--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -13,35 +13,45 @@
             <div class="steps">
                 <img src="img/steps/one.png" alt="step one">
                 <h3><span>Step one</span> Create an<br> Account</h3>
+                <div>
                  <p><a href="http://bombbomb.com/trial/?promo=DEVELOPER" target="_blank">Creating your Developer Account</a>
                 gives you a sandbox where you can play, send a few emails, and get to know BombBomb.</p>
+                    </div>
             </div>
 
             <div class="steps">
                 <img src="img/steps/two.png" alt="step one">
                 <h3><span>Step two</span> Create an<br> OAuth Client</h3>
+                <div>
                  <p>With your account credentials, you can now
                  <a href="/api/#!/Utilities/CreateOAuthClient">create an OAuth Client Id and Secret</a>
                 you can use to send requests to the BombBomb API.</p>
+                </div>
             </div>
 
             <div class="steps">
                 <img src="img/steps/three.png" alt="step one">
                 <h3><span>Step three</span> Do the<br> OAuth Dance</h3>
+                <div>
                 <p><a>Give your users a link</a> that has them approve your app for access, then write down their token.</p>
+                </div>
             </div>
 
             <div class="steps">
                 <img src="img/steps/four.png" alt="step one">
                 <h3><span>Step four</span> Get your<br> library</h3>
+                <div>
                 <p>This is it! Pop in one of <a href="/libs">our ready-to-play libraries</a>, give it the user token, and you're
             cooking!</p>
+                </div>
             </div>
 
             <div class="steps">
                 <img src="img/steps/five.png" alt="step one">
                 <h3><span>Step five</span> Subscribe to<br> webhooks</h3>
+                <div>
                 <p>Stay in the loop with simple POSTs from our <a href="/webhooks">webhooks</a>.</p>
+                </div>
             </div>
 
         </div>
