--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/scripts.js"></script>
 
+    <link rel="shortcut icon" href="http://www.bombbomb.com/wp-content/uploads/2015/07/favicon.png">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
