why section text

--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -1,6 +1,18 @@
 <section id="why_bombbomb" class="container content-section text-center">
     <h2>Why build with BombBomb?</h2>
 
+    <div style="color:black;">
+
+        <p>All kinds of people in all kinds of industries all around the world are using BombBomb every day. We get them
+            face to face with more people more often, which helps them build relationships and grow their businesses and
+            organizations.</p>
+
+        <p>We prefer to serve our customers in the places they’re already working - like in your platform. They want to
+            record new videos, access their video library, sync lists, pull in our tracking and analytics, trigger email
+            sending and drip automations, and other things we make available to you.</p>
+
+        <p>Check out <a href="/api">our open API</a> and start a free developer account to explore what’s possible.</p>
+    </div>
 
 </section>
 
